--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,14 @@
 
 /* Custom component styles */
 @layer components {
+
+  .main-con {
+    background-color: white;
+    border-radius: 2vh;
+    padding: 20px;
+   
+  }
+  
   /* Button styles */
   .scroll-offset {
     scroll-margin-top: 80px;
@@ -46,7 +54,7 @@
   }
 
   .hero-text {
-    @apply bg-gradient-to-r from-purple-400 to-blue-700 bg-clip-text text-transparent
+    @apply bg-gradient-to-r from-purple-700 to-pink-500 bg-clip-text text-transparent
 
   }
   
